<resources>
    <string name="app_name">Memo</string>
    <string name="settings1_name">Memo</string>
    <string name="Button1">Speichern</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="MainTextViewMemo">Gib ein Memo ein</string>
    <string name="MainTextViewAudio">Halte den REC Button um eine Sprachnotiz aufzunehmen</string>
    <string name="title_activity_edit_audio">Sprachaufnahmen</string>
    <string name="text_activity_edit_notes">Drücke Zurück um alle Änderungen zu speichern</string>
</resources>
