<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_memo"
        android:title="@string/settings1_name"
        app:showAsAction="never">


    </item>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never">


    </item>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="2">


    </item>

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="1">


    </item>


</menu>